--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,38 @@
 #  Service Properties  #
 #======================#
 server.port=8081
-
+service.api.name=paams-d-userManageOrders
+service.api.version=1.0.1
 
 #==================#
-#  Log Properties  #
+#  API Properties  #
 #==================#
+# Base path
+constants.api.uri.basePath=/api/user
+# Endpoint paths
+constants.api.uri.userNewOrder.path=/new/order
+constants.api.uri.retrieveUserOrder.path=/retrieve/orders
+constants.api.uri.cancelOrderRequest.path=/cancel/order
+constants.api.uri.deleteOrderRequest.path=/delete/order
+# Endpoint names
+constants.api.uri.userNewOrder.name=User New Order
+constants.api.uri.retrieveUserOrder.name=Retrieve User Orders
+constants.api.uri.cancelOrderRequest.name=Cancel Order Request
+constants.api.uri.deleteOrderRequest.name=Delete Order Request
+# Order status constants
+constants.api.uri.status.orderPlaced=orderPlaced
+
+
+#====================#
+#  Mongo Properties  #
+#====================#
+spring.data.mongodb.database=PAA
+spring.data.mongodb.uri=mongodb://localhost:27017/
+
+
+#=============================#
+#  Excecution Log Properties  #
+#=============================#
 logging.level.com.paa.dms.user.manage.orders=DEBUG
 
 logging.pattern.level='[%X{data}%thread] [%X{X-B3-TraceId:-}] - %5p'
@@ -17,18 +44,19 @@ logging.level.org.springframework.data.mongodb.core.MongoTemplate=OFF
 logging.level.org.mongodb.driver=OFF
 
 
-#==================#
-#  API Properties  #
-#==================#
-constants.api.uri.basePath=/api/user
-constants.api.uri.userNewOrder.path=/new/order
-constants.api.uri.retrieveUserOrder.path=/retrieve/orders
-constants.api.uri.cancelOrderRequest.path=/cancel/order
-constants.api.uri.deleteOrderRequest.path=/delete/order
+#========================#
+#   DEV Log Properties   #
+#========================#
+service.api.endpoint.call=Service Call -
+constants.api.uri.userNewOrder.call=${service.api.endpoint.call} ${constants.api.uri.userNewOrder.name}
+constants.api.uri.retrieveUserOrder.call=${service.api.endpoint.call} ${constants.api.uri.retrieveUserOrder.name}
+constants.api.uri.cancelOrderRequest.call=${service.api.endpoint.call} ${constants.api.uri.cancelOrderRequest.name}
+constants.api.uri.deleteOrderRequest.call=${service.api.endpoint.call} ${constants.api.uri.deleteOrderRequest.name}
 
 
-#====================#
-#  Mongo Properties  #
-#====================#
-spring.data.mongodb.database=PAA
-spring.data.mongodb.uri=mongodb://localhost:27017/
+#=============================#
+#  Error Resolver Properties  #
+#=============================#
+constants.api.uri.errors.msg.unexpected=An unexpected error occurred
+constants.api.uri.errors.msg.noDataFound=Resource not found in DB
+constants.api.uri.errors.msg.forbidden=Invalid Request due to data validation
