feat: add swagger documentation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,17 @@
 #======================#
 #  Service Properties  #
 #======================#
-server.port=8081
+server.port=8080
+
+#======================#
+#  Swagger Properties  #
+#======================#
 service.api.name=paams-d-userManageOrders
+service.api.version=1.0.2
+service.api.details=This microservice is responsible for creating, retrieving, canceling and deleting users orders.
+service.api.dev.name=Hiram Sanchez
+service.api.dev.web=https://github.com/HiramSanchez
+service.api.dev.email=hiramsanchez.dev@gmail.com
 
 #==================#
 #  API Properties  #
