feat: add endpoint to update order status

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.banner.location=banner.txt
 #  Swagger Properties  #
 #======================#
 service.api.name=paams-d-userManageOrders
-service.api.version=1.0.2
+service.api.version=1.0.3
 service.api.details=This microservice is responsible for creating, retrieving, canceling and deleting users orders.
 service.api.dev.name=Hiram Sanchez
 service.api.dev.web=https://github.com/HiramSanchez
@@ -22,16 +22,20 @@ constants.api.uri.basePath=/api/user
 # Endpoint paths
 constants.api.uri.userNewOrder.path=/new/order
 constants.api.uri.retrieveUserOrder.path=/retrieve/orders
-constants.api.uri.cancelOrderRequest.path=/cancel/order
+constants.api.uri.cancelOrderRequest.path=/change/order
 constants.api.uri.deleteOrderRequest.path=/delete/order
 # Endpoint names
 constants.api.uri.userNewOrder.name=User New Order
 constants.api.uri.retrieveUserOrder.name=Retrieve User Orders
-constants.api.uri.cancelOrderRequest.name=Cancel Order Request
+constants.api.uri.cancelOrderRequest.name=Change Order Request
 constants.api.uri.deleteOrderRequest.name=Delete Order Request
 # Order status constants
 constants.api.uri.status.orderPlaced=orderPlaced
-
+constants.api.uri.status.dispatched=dispatched
+constants.api.uri.status.shipped=shipped
+constants.api.uri.status.outForDelivery=outForDelivery
+constants.api.uri.status.delivered=delivered
+constants.api.uri.status.canceled=canceled
 
 #====================#
 #  Mongo Properties  #
@@ -39,19 +43,16 @@ constants.api.uri.status.orderPlaced=orderPlaced
 spring.data.mongodb.database=PAA
 spring.data.mongodb.uri=mongodb://localhost:27017/
 
-
 #=============================#
 #  Excecution Log Properties  #
 #=============================#
 logging.level.com.paa.dms.user.manage.orders=DEBUG
-
 logging.pattern.level='[%X{data}%thread] [%X{X-B3-TraceId:-}] - %5p'
 logging.pattern.console=%p, %d{'yyyy-MM-dd HH:mm:ss,SSS',America/Los_Angeles}, %C{1}:%M:%L, %X{mdc.uuid}, %m%n%ex{3}
 logging.level.org.springframework.web=OFF
 logging.level.org.springframework.web.servlet.DispatcherServlet=OFF
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=OFF
 logging.level.org.mongodb.driver=OFF
-
 
 #========================#
 #   DEV Log Properties   #
@@ -62,10 +63,10 @@ constants.api.uri.retrieveUserOrder.call=${service.api.endpoint.call} ${constant
 constants.api.uri.cancelOrderRequest.call=${service.api.endpoint.call} ${constants.api.uri.cancelOrderRequest.name}
 constants.api.uri.deleteOrderRequest.call=${service.api.endpoint.call} ${constants.api.uri.deleteOrderRequest.name}
 
-
 #=============================#
 #  Error Resolver Properties  #
 #=============================#
 constants.api.uri.errors.msg.unexpected=An unexpected error occurred
 constants.api.uri.errors.msg.noDataFound=Resource not found in DB
-constants.api.uri.errors.msg.forbidden=Invalid Request due to data validation
+constants.api.uri.errors.msg.forbidden=Invalid movement
+constants.api.uri.errors.msg.badRequest=The requested operation does not exist
